Temporary bug fix, pushes footer to bottom of page on mobile

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -191,6 +191,9 @@
   .cards {
     grid-template-columns: 1fr;
   }
+  .page-container{
+    min-height: 168vh;
+  }
 }
 
 // Small devices (landscape phones, 576px and up)
